--- a/personal.html
+++ b/personal.html
@@ -23,11 +23,11 @@
 
 	<main>
 		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<br>
-		<img src = "images/wisconsin_dells.jpg" width="25" alt = "Wisconsin Dells">
-		<img src = "images/badlands.jpg" width="1000" alt = "Badlands">
-		<img src = "images/falling.jpg" width="25" alt = "Falling">
-		<img src = "images/jewel_cave.JPG" width="1000" alt = "Jewel Cave">
-		<img src = "images/rushmore.jpg" width="25" alt = "Rushmore">
+		<img src = "images/wisconsin_dells.jpg" width="25" alt = "Picture of Kids at Wisconsin Dells">
+		<img src = "images/badlands.jpg" width="1000" alt = "Picture of Kids at The Badlands">
+		<img src = "images/falling.jpg" width="25" alt = "My Kid Falling">
+		<img src = "images/jewel_cave.JPG" width="1000" alt = "3 Kids In Front of Jewel Cave Sign">
+		<img src = "images/rushmore.jpg" width="25" alt = "Big View of Mount Rushmore">
 	</main>
 	<footer>
 		<p>Colleen van Lent &copy; 2020</p>
